# Feature Release steps

 - tests passing
 - mix format
 - inline documentation
 - top of module documentation
 - version bump in mix.exs
 - version bump in README.md
 - version bump in CHANGELOG
 - version bump in library.md
 - update OEIS stats for release version
 - git tag -a v0.x.x -m "v0.x.x - summary"
 - git push
 - git push --tags
 - mix hex.publish

# CHANGELOG


## v0.*.*

### Enhancements

 - Fractions
  - power/3 now handles coercion values for string, int, and float
  - fixed reducable values not having proper fractional results (previously returned :no_fractional_power)
  - Added absolute_value/1
  - Added near_equal?/3
  - Added floor/1 and ceiling/1
  - Added increment/2 and decrement/2
  - increment/2 and decrement/2 support `:both` option
  - Added within?/3 and within?/2
  - added type guard: is_coercible?
  - all new fraction functions from this release support type coercion (using is_coercible?/1)
  - added round/1 for rounding to nearest whole value
  

## v0.11.2

### Build/Development changes

 - Module requiring HTTPoison and Jason excluded from packaging
 - HTTPoison and Jason moved to `dev` and `test` only requirements
 - Credo is now being used for style/consistency checks (with specific configuration to make credo run in a reasonable time frame)
 - new documentation as main page for hexdocs (library.md)
 
### Libraries

 - Refactored Fractions.lcm/1 and Fractions.lcm/2 to Math.lcm/1 and Math.lcm/2
 - Refactored nth_root/3, integer_nth_root?/3, and floats_equal?/3 from Fractions to Math
 - Updated all cached Math functions to use CacheAgent.cache_as macro

### Sequences

 - Moved A000045/Fibonacci from Sequence.OEIS to Sequence.OEIS.Core
  

## v0.11.1

### Enhancements

 - Chunky.Math
  - `analyze_number/2` - Run all predicates against `n` to generate labels for `n`
  - `is_odd?/1` - New predicate
  - `is_even?/1` - New predicate
  - `is_zero?/1` - New predicate
  - `is_positive?/1` - New predicate
  - `is_negative?/1` - New predicate