@@ -12,6 +12,56 @@ defmodule Chunky.Sequence.OEIS do
    - `Chunky.Sequence.OEIS.Primes` - Primes and related sequences
    - `Chunky.Sequence.OEIS.Factors` - Factorizations and divisors
 
+  ## Coverage
+  
+  The Chunky sequence library will never have 100% coverage of OEIS sequences; there are just too many already
+  listed, and too many added every year. The goal of the sequence library is to cover the OEIS Core
+  set, as well as selected subsets of other keywords or topics.
+  
+  Current coverage stats:
+  
+  ```
+    OEIS Coverage
+            210 total sequences
+    By Module
+            Elixir.Chunky.Sequence.OEIS - 1 sequences
+            Elixir.Chunky.Sequence.OEIS.Core - 90 sequences
+            Elixir.Chunky.Sequence.OEIS.Factors - 98 sequences
+            Elixir.Chunky.Sequence.OEIS.Primes - 1 sequences
+            Elixir.Chunky.Sequence.OEIS.Sigma - 20 sequences
+    Sequence Groups
+            OEIS Core Sequences - 89 / 177 (50.28%)
+            OEIS Core::Easy Sequences - 75 / 146 (51.37%)
+            OEIS Core::Hard Sequences - 12 / 12 (100.0%)
+            OEIS Core::Multiplicative Sequences - 22 / 22 (100.0%)
+            OEIS Core::Eigen Sequences - 5 / 5 (100.0%)
+  ```
+  
+  Available/covered sequences, by OEIS ID:
+  
+  ```
+        A000001 A000002 A000004 A000005 A000007 A000009 A000010 A000012 A000027 A000032
+        A000035 A000037 A000040 A000041 A000043 A000045 A000069 A000079 A000081 A000085
+        A000105 A000108 A000109 A000110 A000111 A000112 A000120 A000124 A000129 A000142
+        A000166 A000169 A000203 A000204 A000217 A000219 A000225 A000244 A000262 A000272
+        A000290 A000292 A000302 A000312 A000326 A000330 A000364 A000396 A000521 A000578
+        A000583 A000593 A000594 A000609 A000670 A000688 A000720 A000796 A000798 A000959
+        A000961 A000977 A000984 A001003 A001006 A001045 A001055 A001065 A001157 A001158
+        A001159 A001160 A001190 A001221 A001222 A001227 A001358 A001477 A001511 A001597
+        A001615 A001694 A001826 A001842 A002093 A002106 A002182 A002473 A002654 A003094
+        A003484 A003586 A003601 A004709 A005100 A005101 A005117 A005361 A005470 A005934
+        A006530 A006881 A006966 A007018 A007304 A007412 A007434 A007774 A007947 A008292
+        A008683 A008966 A013929 A013954 A013955 A013956 A013957 A013958 A013959 A013960
+        A013961 A013962 A013963 A013964 A013965 A013966 A013967 A013968 A014612 A014613
+        A014614 A020639 A030513 A030515 A033273 A033942 A033987 A033992 A033993 A036537
+        A037143 A038109 A039956 A046099 A046306 A046308 A046310 A046312 A046314 A046321
+        A046386 A046387 A046660 A048272 A051037 A051038 A051270 A052486 A055512 A056911
+        A059269 A059376 A059377 A059378 A065958 A065959 A065960 A067259 A067885 A069091
+        A069092 A069093 A069094 A069095 A069272 A069273 A069274 A069275 A069276 A069277
+        A069278 A069279 A069280 A069281 A074969 A076479 A080197 A080681 A080682 A080683
+        A117805 A123321 A123322 A130897 A160889 A160891 A160893 A160895 A160897 A160908
+        A160953 A160957 A160960 A162511 A162643 A209061 A211337 A211338  
+  ```
 
   """
   import Chunky.Sequence, only: [sequence_for_list: 1]
