@@ -4,11 +4,12 @@
  - mix format
  - inline documentation
  - top of module documentation
+ - OEIS Stats in lib/sequence/oeis.ex
  - version bump in mix.exs
  - version bump in README.md
  - version bump in CHANGELOG
  - version bump in library.md
- - update OEIS stats for release version
+ - update OEIS stats for release version in CHANGELOG
  - git tag -a v0.x.x -m "v0.x.x - summary"
  - git push
  - git push --tags
